# vicare-cityhash

./: ANNOUNCE  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  configure.sh  prepare.sh
doc/: Makefile.am  vicare-cityhash.texi
lib/: Makefile.am  compile-all.sps  dependencies.make  features.c  libraries.scm
lib/vicare/: cityhash.sls
lib/vicare/cityhash/: constants.sls.in
lib/vicare/crypto/: cityhash.sls  cityhash.vicare.sls
lib/vicare/crypto/cityhash/: unsafe-capi.sls  unsafe-capi.vicare.sls
src/: Makefile.am  cch.cpp  cch.h  internals.h  vicare-bridge.cpp  vicare-cityhash.c
tests/: Makefile.am  demo-for-documentation.sps  demo-for-plain-documentation.sps  proof-for-documentation.sps  test-vicare-cityhash.sps
